--- a/public/game.html
+++ b/public/game.html
@@ -80,7 +80,9 @@
             var track = getArc(0, 360, createjs.Graphics.getRGB(66, 147, 33));
             stage.addChild(track);
 
-            var target = getArc(0, getTargetSize(), createjs.Graphics.getRGB(255, 255, 255));
+            var targetSize= getTargetSize();
+            var target = getArc(0, targetSize, createjs.Graphics.getRGB(255, 255, 255));
+            target.rotation = Math.floor(Math.random() * 360);
             stage.addChild(target);
 
             var playerSize = 45;
@@ -91,7 +93,8 @@
                 stage.removeChild(target);
                 var random = Math.floor(Math.random() * 360)
 
-                target = getArc(random, getTargetSize(), createjs.Graphics.getRGB(255, 255, 255));
+                targetSize = getTargetSize();
+                target = getArc(random, targetSize, createjs.Graphics.getRGB(255, 255, 255));
                 stage.addChild(target);
 
                 stage.setChildIndex(player, stage.getNumChildren()-1)
@@ -117,8 +120,12 @@
                 var playerPositionStart = player.rotation - playerSize/2;
                 var playerPositionEnd = player.rotation + playerSize/2;
 
-                var targetPositionStart = target.rotation + 0;
-                var targetPositionEnd = target.rotation + 45;
+                var targetPositionStart = target.rotation - targetSize/2;
+                var targetPositionEnd = target.rotation + targetSize/2;
+
+                if (targetPositionStart < 0) {
+                    targetPositionStart+=360
+                }
 
                 console.log('player is: ' + playerPositionStart + ' and ' + playerPositionEnd);
                 console.log('Target is: ' + targetPositionStart + ' and ' + targetPositionEnd);
