--- a/public/game.html
+++ b/public/game.html
@@ -27,9 +27,8 @@
 
         h1 {
             margin: 0;
-            padding: 20px;
             font-family: Arial;
-            color: #ff7700;
+            color: rgba(245, 81, 95, 1);
         }
     </style>
 
@@ -180,6 +179,7 @@
     <div>
         <h1>Tap when the shapes meet</h1>
         <canvas id="game" width="320" height="320"></canvas>
+        <h1>Score 10 to complete your purchase</h1>
     </div>
     <script>
         init(1);
