--- a/public/stats.html
+++ b/public/stats.html
@@ -26,7 +26,9 @@
         }
 
         .btn-primary {
-
+            color: #003366;
+            background-color: white;
+            border-color: white
         }
     </style>
     <title>Card</title>
