--- a/public/overspend.html
+++ b/public/overspend.html
@@ -132,7 +132,7 @@
   },
   xAxis: {
       categories: [
-          'Average spend',
+          'Average daily spend',
           'Today'
       ],
       labels: {
